se hizo responsivo el menú, footer e index

--- a/archivos-css/style.css
+++ b/archivos-css/style.css
@@ -7,359 +7,684 @@
 }
 
 
+/* --------------------
+    MOBILE FIRST
+-------------------- */
+
 /* FUENTES Y TAMAÑOS */
 h1, h2, h3, a, label {
     font-family: 'Josefin Sans', sans-serif;
 }
+    
+    p {
+        font-size: 5vw;
+        font-weight: 500;
+    }
+    
+    
+    /* DEFINO GRID EN TODO EL BODY */
+    body {
+        display: grid;
+        grid-row-gap: 40px;
+        grid-template-areas:
+            "header_"
+            "main_"
+            "footer_";           
+    }
+    
+    /* LINKEO GRID A SUS RESPECTIVAS PARTES  */
+    header {
+        grid-area: "header_";
+        background-color: #7B77F2;
+    }
+    
+    main {
+        grid-area: "main_";
+    }
+    
+    footer{
+        grid-area: "footer_";
+        background-color: #7B77F2;
+    }
+    
+    
+    /* -------------------- 
+        HEADER Y FOOTER
+    -------------------- */
+    .logo {
+        width: 30vw;
+        padding-left: 0.5vw;
+    }
 
-p {
-    font-size: 250%;
-    font-weight: 500;
-}
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    footer, .lista {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    #derechos {
+        font-size: 4vw;
+        padding-left: 2vw;
+    }
+    
+    .lista li {
+        font-size: 5vw;
+        padding: 2vw 0vw;
+    }
+    
+    .lista li a {
+        padding: 2vw 3vw;
+    }
+    
+    .lista li a:active {
+        background-color: #6bccf1;
+        color: white;
+    }
+    
+    
+    /* -------------------- 
+            BODY 
+    -------------------- */
+    main {
+        margin: -7vw 4vw;
+    }
+    
+    .fondoColorV, .formulario {
+        background-color: #AC99F2;
+    }
+    
+    .seccionCeleste {
+        height: 15vw;
+        background-color: #6bccf1;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+    
+    .boton, .celeste {
+        height: 4vw;
+        font-size: 5vw;
+        padding: 2vw 10vw 2vw 10vw;
+        border: 2px solid #7B77F2;
+        background-color: #79DCF2;
+    }
+    
+    .boton {
+        margin-top: 2.5vw;
+    }
+    
+    .boton:hover{
+        background-color: #7B77F2;
+        color: black;
+    }
+    
+    .iconos {
+        color: #551A8B;
+    }
+    
+    /* -------------------- 
+            INDEX 
+    -------------------- */
+    #mainIndex {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .titulosIndex {
+        text-align: center;
+        font-size: 2.1vw;
+        padding: 5vw 0vw;
+        margin: 3vw;
+        background-color: #79DCF2;
+    }
+    
+    .titulosIndex h1 {
+        margin-bottom: 5vw;
+    }
+    
+    .titulosIndex h2 {
+        font-weight: 500;
+        font-size: 4vw;
+        padding: 0vw 2vw;
+    }
+    
+    .info {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .info p {
+        font-size: 4vw;
+        text-align: justify;
+        margin: 2vw 8vw ;
+    }
+        
+    .video video {
+        width: 91vw;
+    }
+    
+    
+    /* -------------------- 
+            NOSOTROS 
+    -------------------- */
+    #mainNosotros{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    #mainNosotros img {
+        width: 35vw;
+    }
+    
+    .nosotros {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 5vw;
+    }
+    .nosotros p, .nuestroTrabajo {
+        padding: 2vw;
+        font-size: 2vw;
+    }
+    
+    .nuestroTrabajo {
+        line-height: 3.5vw;
+    }
+    
+    .celeste {
+        width: 49.7vw;
+        font-size: 2.5vw;
+        text-align: center;
+        border: 0px;
+    }
+
+    .imgPreguntas {
+        display: none;
+    }
+    
+    .preguntasFrecuentes{
+        font-size: 0.7vw;
+        display: grid;
+        grid-row-gap: 1vw;
+        grid-template-areas:
+            "p0_ p0_"
+            "p1_ p4_"
+            "p3_ p5_"
+            "p2_ p5_";    
+    }
+    
+    .preguntasFrecuentes h2 {
+        background-color: #79DCF2;
+    }
+    
+    .preguntasFrecuentes div .iconos {
+        font-size: 3vw;
+    }
+    
+    .seccionPreguntas {
+        padding: 0vw 2vw;
+    }
+    
+    .p0 {
+        grid-area: p0_;
+        font-size: 3vw;
+        color: #551A8B;
+        justify-self: center;
+        padding: 2vw 10.7vw 0vw 10vw;
+    }
+    
+    .p1 {
+        grid-area: p1_;
+    }
+    
+    .p2 {
+        grid-area: p2_;
+        padding-bottom: 1vw;
+    }
+    
+    .p3 {
+        grid-area: p3_;
+    }
+    
+    .p4 {
+        grid-area: p4_;
+    }
+    
+    .p5 {
+        grid-area: p5_;
+    }
+    
+    .preguntas {
+        display: flex;
+        padding-bottom: 0.5vw;
+    }
+    
+    .preguntas h3 {
+        align-self: center;
+        padding: 0.3vw 0vw 0vw 1vw;
+        font-size: 1.5vw;
+    }
+    
+    
+    /* -------------------- 
+        CONTACTANOS
+    -------------------- */
+    
+    #mainContactanos {
+        display: flex;
+        flex-direction: row;
+        column-gap: 3vw;
+        justify-content: center;
+    }
+    
+    .mensajeContacto {
+        font-size: 3vw;
+        text-align: center;
+        line-height: 7vw;
+    }
+    
+    .infoContactanos {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        column-gap: 5vw;
+        margin-bottom: 2vw;
+        text-align: center;
+    }
+    
+    .infoContactanos div {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        width: 20vw;
+        padding: 1vw;
+        border: 2px solid #551A8B;
+        background-color: #79DCF2;
+    }
+    
+    .infoContactanos div .iconos {
+        font-size: 3vw;
+        margin-bottom: 1vw;
+    }
+    
+    .infoContactanos div p {
+        font-size: 2vw;
+    }
+    
+    .mapa {
+        width: 50vw;
+        height: 26.7vw;
+    }
+    
+    .formulario {
+        padding: 3vw;
+    }
+    
+    .formulario div {
+        padding: 0.5vw 0vw;
+    }
+    
+    .formulario div label {
+        font-size: 1.6vw;
+    }
+    
+    .formulario div .ingreso {
+        display: block;
+        width: 35vw;
+        font-size: 1.5vw;
+        margin-bottom: 0.5vw;
+    }
+    
+    input, textarea {
+        background-color: white;
+    }
+    
+    .motivo div label {
+        font-size: 1.4vw;
+        margin-right: 1vw;
+    }
+    
+    .motivo div input {
+        margin-left: 0.5vw;
+    }
+    
+    .botones input {
+        width: 13vw;
+        margin: 2vw 0 0 3vw;
+        font-size: 1.5vw;
+        font-weight: 600;
+    }
+    
+    .botones input:hover {
+        background-color: #551A8B;
+        color: white;
+    }
 
 
-/* DEFINO GRID EN TODO EL BODY */
-body {
-    display: grid;
-    grid-row-gap: 40px;
-    grid-template-areas:
-        "header_"
-        "main_"
-        "footer_";           
-}
 
-/* LINKEO GRID A SUS RESPECTIVAS PARTES  */
-header {
-    grid-area: "header_";
-    background-color: #7B77F2;
-}
+/* -------------------- 
+    APTO TABLETS 
+-------------------- */
+@media screen and (min-width: 768px) {
+    
+    nav {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
 
-main {
-    grid-area: "main_";
-}
-
-footer{
-    grid-area: "footer_";
-    background-color: #7B77F2;
+    /* -------------------- 
+            NOSOTROS 
+    -------------------- */
+    .imgPreguntas {
+        display: block;
+    }
 }
 
 
 /* -------------------- 
-    HEADER Y FOOTER
--------------------- */
-.logo {
-    width: 8vw;
-    padding-left: 0.5vw;
+    APTO ORDENADORES 
+-------------------- */ 
+@media screen and (min-width:1024px){
+  
+    p {
+        font-size: 250%;
+        font-weight: 500;
+    }
+     
+    
+    /* -------------------- 
+        HEADER Y FOOTER
+    -------------------- */
+    .logo {
+        width: 8vw;
+    }
+       
+    #derechos {
+        font-size: 1.5vw;
+        padding-left: 1vw;
+    }
+    
+    .lista li {
+        font-size: 1.8vw;
+        padding: 1.5vw 0vw;
+    }
+    
+    .lista li a {
+        padding: 1.5vw 3vw;
+    }
+    
+    .lista li:hover {
+        background-color: #6bccf1;
+    }
+    
+    .lista li a:active {
+        color: white;
+    }
+    
+    
+    /* -------------------- 
+            BODY 
+    -------------------- */
+    main {
+        margin: 0vw 2vw;
+    }
+       
+    .fondoColorV {
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .seccionCeleste {
+        height: 8vw;
+    }
+    
+    .boton, .celeste {
+        height: 2vw;
+        font-size: 200%;
+        padding: 1.5vw 5vw 1vw 5vw;
+        border: 3px solid #7B77F2;
+    }
+    
+    .boton {
+        margin-top: 1.5vw;
+    }
+
+    
+    /* -------------------- 
+            INDEX 
+    -------------------- */
+    #mainIndex {
+        display: flex;
+        flex-direction: row;
+/*         font-size: 1vw; */
+    }
+    
+    .titulosIndex {
+        font-size: 1.1vw;
+        padding: 2vw;
+        margin: 4vw 0.1vw 2.7vw 3vw ;
+    }
+    
+    .titulosIndex h1 {
+        margin-bottom: 1vw;
+    }
+    
+    .titulosIndex h2 {
+        font-weight: 500;
+    }
+       
+    .info p {
+        font-size: 1.7vw;
+        margin: 1vw 3vw 3vw 5vw ;
+    }
+        
+    .video video {
+        width: 43vw;
+    }
+    
+    
+    /* -------------------- 
+            NOSOTROS 
+    -------------------- */
+    #mainNosotros{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    #mainNosotros img {
+        width: 35vw;
+    }
+    
+    .nosotros {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 5vw;
+    }
+    .nosotros p, .nuestroTrabajo {
+        padding: 2vw;
+        font-size: 2vw;
+    }
+    
+    .nuestroTrabajo {
+        line-height: 3.5vw;
+    }
+    
+    .celeste {
+        width: 49.7vw;
+        font-size: 2.5vw;
+        text-align: center;
+        border: 0px;
+    }
+   
+    .preguntasFrecuentes{
+        font-size: 0.7vw;
+        display: grid;
+        grid-row-gap: 1vw;
+        grid-template-areas:
+            "p0_ p0_"
+            "p1_ p4_"
+            "p3_ p5_"
+            "p2_ p5_";    
+    }
+    
+    .preguntasFrecuentes h2 {
+        background-color: #79DCF2;
+    }
+    
+    .preguntasFrecuentes div .iconos {
+        font-size: 3vw;
+    }
+    
+    .seccionPreguntas {
+        padding: 0vw 2vw;
+    }
+    
+    .p0 {
+        grid-area: p0_;
+        font-size: 3vw;
+        color: #551A8B;
+        justify-self: center;
+        padding: 2vw 10.7vw 0vw 10vw;
+    }
+    
+    .p1 {
+        grid-area: p1_;
+    }
+    
+    .p2 {
+        grid-area: p2_;
+        padding-bottom: 1vw;
+    }
+    
+    .p3 {
+        grid-area: p3_;
+    }
+    
+    .p4 {
+        grid-area: p4_;
+    }
+    
+    .p5 {
+        grid-area: p5_;
+    }
+    
+    .preguntas {
+        display: flex;
+        padding-bottom: 0.5vw;
+    }
+    
+    .preguntas h3 {
+        align-self: center;
+        padding: 0.3vw 0vw 0vw 1vw;
+        font-size: 1.5vw;
+    }
+    
+    
+    /* -------------------- 
+        CONTACTANOS
+    -------------------- */
+    
+    #mainContactanos {
+        display: flex;
+        flex-direction: row;
+        column-gap: 3vw;
+        justify-content: center;
+    }
+    
+    .mensajeContacto {
+        font-size: 3vw;
+        text-align: center;
+        line-height: 7vw;
+    }
+    
+    .infoContactanos {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        column-gap: 5vw;
+        margin-bottom: 2vw;
+        text-align: center;
+    }
+    
+    .infoContactanos div {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        width: 20vw;
+        padding: 1vw;
+        border: 2px solid #551A8B;
+        background-color: #79DCF2;
+    }
+    
+    .infoContactanos div .iconos {
+        font-size: 3vw;
+        margin-bottom: 1vw;
+    }
+    
+    .infoContactanos div p {
+        font-size: 2vw;
+    }
+    
+    .mapa {
+        width: 50vw;
+        height: 26.7vw;
+    }
+    
+    .formulario {
+        padding: 3vw;
+    }
+    
+    .formulario div {
+        padding: 0.5vw 0vw;
+    }
+    
+    .formulario div label {
+        font-size: 1.6vw;
+    }
+    
+    .formulario div .ingreso {
+        display: block;
+        width: 35vw;
+        font-size: 1.5vw;
+        margin-bottom: 0.5vw;
+    }
+    
+    input, textarea {
+        background-color: white;
+    }
+    
+    .motivo div label {
+        font-size: 1.4vw;
+        margin-right: 1vw;
+    }
+    
+    .motivo div input {
+        margin-left: 0.5vw;
+    }
+    
+    .botones input {
+        width: 13vw;
+        margin: 2vw 0 0 3vw;
+        font-size: 1.5vw;
+        font-weight: 600;
+    }
+    
+    .botones input:hover {
+        background-color: #551A8B;
+        color: white;
+    }
 }
 
-nav, footer, .lista {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#derechos {
-    font-size: 1.5vw;
-    padding-left: 1vw;
-}
-
-.lista li {
-    font-size: 1.8vw;
-    padding: 1.5vw 0vw;
-}
-
-.lista li a {
-    padding: 1.5vw 3vw;
-}
-
-.lista li:hover {
-    background-color: #6bccf1;
-}
-
-.lista li a:active {
-    color: white;
-}
-
-
-/* -------------------- 
-         BODY 
--------------------- */
-main {
-    margin: 0vw 2vw;
-}
-
-.fondoColorV, .formulario {
-    background-color: #AC99F2;
-}
-
-.fondoColorV {
-    display: flex;
-    flex-direction: row;
-}
-
-.seccionCeleste {
-    height: 8vw;
-    background-color: #6bccf1;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-
-.boton, .celeste {
-    height: 2vw;
-    font-size: 200%;
-    padding: 1.5vw 5vw 1vw 5vw;
-    border: 3px solid #7B77F2;
-    background-color: #79DCF2;
-}
-
-.boton {
-    margin-top: 1.5vw;
-}
-
-.boton:hover{
-    background-color: #7B77F2;
-    color: black;
-}
-
-.iconos {
-    color: #551A8B;
-}
-
-/* -------------------- 
-        INDEX 
--------------------- */
-#mainIndex {
-    display: flex;
-    flex-direction: row;
-    font-size: 1vw;
-}
-
-.titulosIndex {
-    text-align: center;
-    font-size: 1.1vw;
-    padding: 2vw;
-    margin: 4vw 0.1vw 2.7vw 3vw ;
-
-    background-color: #79DCF2;
-}
-
-.titulosIndex h1 {
-    margin-bottom: 1vw;
-}
-
-.titulosIndex h2 {
-    font-weight: 500;
-}
-
-.info {
-    display: flex;
-    flex-direction: column;
-}
-
-.info p {
-    font-size: 1.7vw;
-    text-align: justify;
-    margin: 1vw 3vw 3vw 5vw ;
-}
-
-
-.video video {
-    width: 43vw;
-}
-
-
-/* -------------------- 
-        NOSOTROS 
--------------------- */
-#mainNosotros{
-    display: flex;
-    flex-direction: column;
-}
-
-#mainNosotros img {
-    width: 35vw;
-}
-
-.nosotros {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 5vw;
-}
-.nosotros p, .nuestroTrabajo {
-    padding: 2vw;
-    font-size: 2vw;
-}
-
-.nuestroTrabajo {
-    line-height: 3.5vw;
-}
-
-.celeste {
-    width: 49.7vw;
-    font-size: 2.5vw;
-    text-align: center;
-    border: 0px;
-}
-
-.preguntasFrecuentes{
-    font-size: 0.7vw;
-    display: grid;
-    grid-row-gap: 1vw;
-    grid-template-areas:
-        "p0_ p0_"
-        "p1_ p4_"
-        "p3_ p5_"
-        "p2_ p5_";    
-}
-
-.preguntasFrecuentes h2 {
-    background-color: #79DCF2;
-}
-
-.preguntasFrecuentes div .iconos {
-    font-size: 3vw;
-}
-
-.seccionPreguntas {
-    padding: 0vw 2vw;
-}
-
-.p0 {
-    grid-area: p0_;
-    font-size: 3vw;
-    color: #551A8B;
-    justify-self: center;
-    padding: 2vw 10.7vw 0vw 10vw;
-}
-
-.p1 {
-    grid-area: p1_;
-}
-
-.p2 {
-    grid-area: p2_;
-    padding-bottom: 1vw;
-}
-
-.p3 {
-    grid-area: p3_;
-}
-
-.p4 {
-    grid-area: p4_;
-}
-
-.p5 {
-    grid-area: p5_;
-}
-
-.preguntas {
-    display: flex;
-    padding-bottom: 0.5vw;
-}
-
-.preguntas h3 {
-    align-self: center;
-    padding: 0.3vw 0vw 0vw 1vw;
-    font-size: 1.5vw;
-}
-
-
-/* -------------------- 
-      CONTACTANOS
--------------------- */
-
-#mainContactanos {
-    display: flex;
-    flex-direction: row;
-    column-gap: 3vw;
-    justify-content: center;
-}
-
-.mensajeContacto {
-    font-size: 3vw;
-    text-align: center;
-    line-height: 7vw;
-}
-
-.infoContactanos {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    column-gap: 5vw;
-    margin-bottom: 2vw;
-    text-align: center;
-}
-
-.infoContactanos div {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    width: 20vw;
-    padding: 1vw;
-    border: 2px solid #551A8B;
-    background-color: #79DCF2;
-}
-
-.infoContactanos div .iconos {
-    font-size: 3vw;
-    margin-bottom: 1vw;
-}
-
-.infoContactanos div p {
-    font-size: 2vw;
-}
-
-.mapa {
-    width: 50vw;
-    height: 26.7vw;
-}
-
-.formulario {
-    padding: 3vw;
-}
-
-.formulario div {
-    padding: 0.5vw 0vw;
-}
-
-.formulario div label {
-    font-size: 1.6vw;
-}
-
-.formulario div .ingreso {
-    display: block;
-    width: 35vw;
-    font-size: 1.5vw;
-    margin-bottom: 0.5vw;
-}
-
-input, textarea {
-    background-color: white;
-}
-
-.motivo div label {
-    font-size: 1.4vw;
-    margin-right: 1vw;
-}
-
-.motivo div input {
-    margin-left: 0.5vw;
-}
-
-.botones input {
-    width: 13vw;
-    margin: 2vw 0 0 3vw;
-    font-size: 1.5vw;
-    font-weight: 600;
-}
-
-.botones input:hover {
-    background-color: #551A8B;
-    color: white;
-}
 
 
 
