--- a/archivos-css/style.css
+++ b/archivos-css/style.css
@@ -153,7 +153,7 @@ h1, h2, h3, a, label {
     
     .titulosIndex h2 {
         font-weight: 500;
-        font-size: 4vw;
+        font-size: 4.5vw;
         padding: 0vw 2vw;
     }
     
@@ -163,9 +163,9 @@ h1, h2, h3, a, label {
     }
     
     .info p {
-        font-size: 4vw;
+        font-size: 4.5vw;
         text-align: justify;
-        margin: 2vw 8vw ;
+        margin: 4vw 8vw 0vw 8vw;
     }
         
     .video video {
